infrastructure/kubernetes/logging/logging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
  labels:
    app: logging
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Kibana
      - path: /kibana
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
